--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -42,6 +42,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>guru.springframework.sfgpetclinic.SfgPetClinicApplication </mainClass>
+                </configuration>
             <executions>
                 <execution>
                     <goals>
